--- a/kelinative/package.json
+++ b/kelinative/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-picker/picker": "^2.4.0",
     "react": "17.0.2",
     "react-native": "0.67.4",
-    "react-native-picker-select": "^8.0.4"
+    "react-native-location": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
