--- a/kelinative/package.json
+++ b/kelinative/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-picker/picker": "^2.4.0",
+    "@rnmapbox/maps": "github:rnmapbox/maps#main",
     "react": "17.0.2",
     "react-native": "0.67.4",
-    "react-native-location": "^2.5.0"
+    "react-native-location": "^2.5.0",
+    "react-native-maps": "0.30.1",
+    "react-native-open-maps": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
