--- a/kelinative/package.json
+++ b/kelinative/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.67.4",
     "react-native-location": "^2.5.0",
     "react-native-maps": "0.30.1",
-    "react-native-open-maps": "^0.4.0"
+    "react-native-open-maps": "^0.4.0",
+    "react-native-paper": "^4.12.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
