--- a/kelinative/package.json
+++ b/kelinative/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-picker/picker": "^2.4.0",
     "@rnmapbox/maps": "github:rnmapbox/maps#main",
+    "i18next": "^21.6.16",
     "react": "17.0.2",
+    "react-i18next": "^11.16.6",
     "react-native": "0.67.4",
     "react-native-location": "^2.5.0",
     "react-native-maps": "0.30.1",
