--- a/kelinative/android/gradle.properties
+++ b/kelinative/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+MYAPP_RELEASE_STORE_FILE=milan-release.keystore
+MYAPP_RELEASE_KEY_ALIAS=milan
+MYAPP_RELEASE_STORE_PASSWORD=milan1234
+MYAPP_RELEASE_KEY_PASSWORD=milan1234
